# astrolog

./: .env.example  .env.production.example  .env.staging.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.staging.yml  package.json  pnpm-lock.yaml
services/astro-api/: Dockerfile  pyproject.toml
services/astro-api/src/astro_api/: main.py  settings.py
services/astro-api/src/astro_api/api/: routes_health.py  routes_reports.py
services/astro-api/src/astro_api/schemas/: reports.py
services/astro-api/src/astro_api/services/: report_stub.py
services/astro-api/tests/: test_health.py  test_reports.py
services/backend-common/: pyproject.toml
services/backend-common/src/backend_common/: __init__.py  envelope.py  errors.py  handlers.py  logging.py  middleware.py  production_checks.py  settings.py  version.py
services/saas-api/: Dockerfile  pyproject.toml
services/saas-api/alembic/: env.py
services/saas-api/alembic/versions/: 001_initial.py  002_be03_runtime.py  003_be04_analytics_media.py  004_commerce_persistence.py  005_finance_ledger.py  006_partners.py  007_telegram_bot_integrations.py
services/saas-api/fixtures/tenants/: README.md
services/saas-api/src/saas_api/: main.py  seed.py  settings.py
services/saas-api/src/saas_api/api/: routes_admin.py  routes_analytics.py  routes_auth.py  routes_checkout.py  routes_creator.py  (+10 more)
services/saas-api/tests/: conftest.py  test_app_startup.py  test_be02.py  test_be03.py  test_be03_fix.py  test_be04.py  test_checkout_lifecycle.py  test_checkout_product_validation.py  test_checkout_security.py  test_commerce_persistence.py  test_creator_surfaces.py  test_finance_access.py  test_finance_lifecycle.py  test_health.py  test_integration_production_checks.py  test_ops_access.py  test_payout_method_api.py  test_payout_method_safety.py  test_premium_requests.py  test_production_checks.py  test_public_partners.py  test_public_surfaces.py  test_telegram_bot_integration.py
(+282 files in other folders)
