[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saas-api"
version = "0.1.0"
description = "SaaS platform API for Astro white-label astrology platform"
requires-python = ">=3.11"
dependencies = [
  "backend-common",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.0",
  "bcrypt>=4.2.0",
  "PyJWT>=2.9.0",
  "email-validator>=2.2.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.28.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
